--- a/thorntail/pom.xml
+++ b/thorntail/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.kie</groupId>
     <artifactId>openshift-kie-parent</artifactId>
-    <version>7.24.0-SNAPSHOT</version>
+    <version>7.25.0-SNAPSHOT</version>
   </parent>
 
   <groupId>org.kie</groupId>
@@ -36,10 +36,22 @@
     <dependency>
       <groupId>io.thorntail</groupId>
       <artifactId>undertow</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>io.thorntail.jdk-specific</groupId>
+          <artifactId>thorntail-jdk-specific</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>kubernetes-client</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.yaml</groupId>
+          <artifactId>snakeyaml</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>javax.ws.rs</groupId>
