--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
     <version.logback.kafka.appender>0.2.0-RC2</version.logback.kafka.appender>
     <version.servlet>4.0.1</version.servlet>
     <version.slf4j>1.7.26</version.slf4j>
-    <version.springboot>2.2.0.M4</version.springboot>
+    <version.org.springframework>5.1.3.RELEASE</version.org.springframework>
+    <version.org.spring-boot>2.1.1.RELEASE</version.org.spring-boot>
     <version.thorntail>2.5.0.Final</version.thorntail>
   </properties>
 
@@ -114,7 +115,7 @@
         <!-- Spring Boot -->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>${version.springboot}</version>
+        <version>${version.org.spring-boot}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -122,13 +123,13 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
-        <version>${version.springboot}</version>
+        <version>${version.org.spring-boot}</version>
       </dependency>
 
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-logging</artifactId>
-        <version>${version.springboot}</version>
+        <version>${version.org.spring-boot}</version>
       </dependency>
 
       <!-- -->
