--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -63,6 +63,7 @@
     <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka-clients</artifactId>
+      <classifier>test</classifier>
       <scope>test</scope>
     </dependency>
   </dependencies>
