Removed spring repository configuration + slf4j dependency to avoid duplicated class failure

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -24,10 +24,6 @@
     </dependency>
     <!-- log -->
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
-    <dependency>
       <groupId>com.github.danielwegener</groupId>
       <artifactId>logback-kafka-appender</artifactId>
       <scope>test</scope>
@@ -65,6 +61,12 @@
       <artifactId>kafka-clients</artifactId>
       <classifier>test</classifier>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 </project>
