--- a/kie-remote/pom.xml
+++ b/kie-remote/pom.xml
@@ -16,6 +16,11 @@
           <groupId>org.apache.kafka</groupId>
           <artifactId>kafka-clients</artifactId>
       </dependency>
+      <dependency>
+          <groupId>org.assertj</groupId>
+          <artifactId>assertj-core</artifactId>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
 </project>
