DROOLS-4311 provides a comprehensive Readme (#8)
* DROOLS-4311 provides a comprehensive Readme

* added informations requeste by reviewer

* added other sections to complete

* added prefix path

* changes requested by reviewer

* Update README.md

--- a/sample-hacep-project/sample-hacep-project-client/pom.xml
+++ b/sample-hacep-project/sample-hacep-project-client/pom.xml
@@ -20,5 +20,17 @@
             <groupId>org.kie</groupId>
             <artifactId>sample-hacep-project-kjar</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
     </dependencies>
 </project>
