Drools-4347 Snapshot on demand (#14)
* First impl of snapshot on demand

* Added SnapshotOnDemandUtils

* added todo

* added checks on Leader to skip Snapshot on demand command

* removed useless formatting

* Added test

* fix snapshotOnDemand On Openshift

* added checks to avoid snapshot during the shutdown with a disposed KieSession

* aligned

* jdkhttp startup fix

* changes requeste by reviewer

* changes requested by reviewer

* add a flag to understand if we are in a shutdown phase

* removed unused files

--- a/jdkhttp/Dockerfile
+++ b/jdkhttp/Dockerfile
@@ -5,4 +5,4 @@ WORKDIR $APP_HOME
 COPY target/*-jdkhttp-fat.jar /usr/app/
 RUN chmod 775 /usr/app
 EXPOSE 8080
-CMD ["java","-Xmx130m", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar","openshift-kie-jdkhttp-fat.jar"]
+CMD ["java", "-jar","openshift-kie-jdkhttp-fat.jar"]
