--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <generateModel>YES</generateModel>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <surefire.forkCount>1</surefire.forkCount>
+    <version.hibernate.validator>6.0.17.Final</version.hibernate.validator>
     <version.javax.cdi>2.0.SP1</version.javax.cdi>
     <version.javax.el>3.0.1-b08</version.javax.el>
     <version.javax.ws.rs>2.1.1</version.javax.ws.rs>
@@ -30,6 +31,7 @@
     <version.org.springframework>5.1.3.RELEASE</version.org.springframework>
     <version.org.spring-boot>2.1.1.RELEASE</version.org.spring-boot>
     <version.thorntail>2.5.0.Final</version.thorntail>
+    <version.validation.api>2.0.1.Final</version.validation.api>
   </properties>
 
   <modules>
@@ -132,6 +134,17 @@
         <version>${version.org.spring-boot}</version>
       </dependency>
 
+      <!-- Validation used by fabric8 client-->
+      <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>${version.validation.api}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate.validator</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>${version.hibernate.validator}</version>
+      </dependency>
       <!-- -->
       <dependency>
         <groupId>javax.servlet</groupId>
