[Drools 4392] Deploy with Fabric 8 Maven plugin (#22)
* first confù

* Readme and docker build from maven

* fix deployment on openshift

* fix deploy on all modules

* fix typo

* test on jenkins

* aligned docker files

* changes requeste by reviewer

* changes requeste by reviewer

* revert docker images and fix pom filter resources

* first version of permission for rbac

* fixed rbac

* removed rbac cluster-admin

* added mention on test on openshift 4.1

* procedure to deploy on ocp4

--- a/jdkhttp/kubernetes/deployment.yaml
+++ b/jdkhttp/kubernetes/deployment.yaml
@@ -17,6 +17,7 @@ spec:
         app: openshift-kie-jdkhttp
         version: v1
     spec:
+      serviceAccountName: openshift-kie-jdkhttp
       containers:
         - env:
           name: openshift-kie-jdkhttp
