--- a/jdkhttp/src/main/fabric8/deployment.yml
+++ b/jdkhttp/src/main/fabric8/deployment.yml
@@ -1,10 +1,3 @@
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  labels:
-    app: openshift-kie-springboot
-    version: v1
-  name: openshift-kie-springboot
 spec:
   replicas: 3
   selector:
@@ -20,7 +13,7 @@ spec:
       containers:
         - env:
           name: openshift-kie-springboot
-          image: desmax74/openshift-kie-springboot:5.5
+          image: ${dockerImageName}:latest
           imagePullPolicy: IfNotPresent
           livenessProbe:
             exec:
