--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -66,8 +66,19 @@
 
   </dependencies>
 
+
   <build>
     <finalName>${project.artifactId}</finalName>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+      <resource>
+        <directory>src/main/fabric8</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
@@ -95,7 +106,27 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <version>${version.fabric8.docker-plugin}</version>
+        <configuration>
+          <images>
+            <image>
+              <name>${dockerImageName}</name>
+              <build>
+                <contextDir>${project.basedir}</contextDir>
+                <tags>latest</tags>
+              </build>
+            </image>
+          </images>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>fabric8-maven-plugin</artifactId>
+        <version>${version.fabric8.plugin}</version>
+      </plugin>
     </plugins>
   </build>
-
 </project>
