--- a/springboot/kubernetes/deployment.yaml
+++ b/springboot/kubernetes/deployment.yaml
@@ -17,6 +17,7 @@ spec:
         app: openshift-kie-springboot
         version: v1
     spec:
+      serviceAccountName: openshift-kie-springboot
       containers:
         - env:
           name: openshift-kie-springboot
