--- a/thorntail/pom.xml
+++ b/thorntail/pom.xml
@@ -74,6 +74,16 @@
 
   <build>
     <finalName>${project.artifactId}</finalName>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+      <resource>
+        <directory>src/main/fabric8</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
   </build>
 
 
@@ -95,6 +105,32 @@
                 </goals>
               </execution>
             </executions>
+          </plugin>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>${version.fabric8.docker-plugin}</version>
+            <configuration>
+              <images>
+                <image>
+                  <name>${dockerImageName}</name>
+                  <build>
+                    <contextDir>${project.basedir}</contextDir>
+                    <tags>latest</tags>
+                  </build>
+                </image>
+              </images>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>fabric8-maven-plugin</artifactId>
+            <version>${version.fabric8.plugin}</version>
+          </plugin>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>fabric8-maven-plugin</artifactId>
+            <version>${version.fabric8.plugin}</version>
           </plugin>
         </plugins>
       </build>
