[DROOLS-4349] Implement liveness and readiness probes + fix potential deadlock during on-demand snapshot (#24)
* Initial commit

* Implemented readiness and liveness probes + fix for on-demand snapshot

* Improved liveness probe

* Minor

* Replace AtomicBoolean with volatile boolean

* Moved "noisy" log to debug

--- a/thorntail/kubernetes/deployment.yaml
+++ b/thorntail/kubernetes/deployment.yaml
@@ -27,7 +27,7 @@ spec:
             exec:
               command:
                 - curl
-                - localhost:8080/rest/health
+                - localhost:8080/rest/liveness
             initialDelaySeconds: 20
             periodSeconds: 10
             timeoutSeconds: 1
@@ -39,7 +39,7 @@ spec:
             exec:
               command:
                 - curl
-                - localhost:8080/rest/health
+                - localhost:8080/rest/readiness
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 1
