added explicitely drools-compiler

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
         <version>${version.org.kie}</version>
       </dependency>
       <dependency>
+        <groupId>org.drools</groupId>
+        <artifactId>drools-compiler</artifactId>
+        <version>${version.org.kie}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.kie</groupId>
         <artifactId>kie-maven-plugin</artifactId>
         <version>${version.org.kie}</version>
