[DROOLS-4489] Fix Thorntail rest (#31)
* fix thorntail

* fix thorntail

* revert urls

* fix duplicated jar

* removed duplicated api

* fix jaxrs provided

* removed undertown dep to remove duplicated dep

* exlusions on the last thorntail dep

* Another exclusion

* removed jboss-jaxrs-api_2.1_spec

--- a/thorntail/pom.xml
+++ b/thorntail/pom.xml
@@ -35,11 +35,25 @@
     </dependency>
     <dependency>
       <groupId>io.thorntail</groupId>
-      <artifactId>undertow</artifactId>
+      <artifactId>jaxrs</artifactId>
       <exclusions>
         <exclusion>
           <groupId>io.thorntail.jdk-specific</groupId>
           <artifactId>thorntail-jdk-specific</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.jboss.spec.javax.ws.rs</groupId>
+          <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>io.thorntail</groupId>
+      <artifactId>undertow</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.jboss.spec.javax.ws.rs</groupId>
+          <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -60,10 +74,6 @@
     <dependency>
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>javax.ws.rs</groupId>
-      <artifactId>javax.ws.rs-api</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
