RHDM-1093 fixing inconsistences between kie-parent (#43)
* RHDM-1093: unified Thorntail version and its bom

* fixed dependency version of jackson-databind

* RHDM-1093: removed cdi-api version as it is in kie-parent defined

--- a/thorntail/pom.xml
+++ b/thorntail/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
       <dependency>
         <groupId>io.thorntail</groupId>
-        <artifactId>bom-all</artifactId>
+        <artifactId>bom</artifactId>
         <version>${version.thorntail}</version>
         <scope>import</scope>
         <type>pom</type>
@@ -131,11 +131,6 @@
                 </image>
               </images>
             </configuration>
-          </plugin>
-          <plugin>
-            <groupId>io.fabric8</groupId>
-            <artifactId>fabric8-maven-plugin</artifactId>
-            <version>${version.fabric8.plugin}</version>
           </plugin>
           <plugin>
             <groupId>io.fabric8</groupId>
