--- a/thorntail/pom.xml
+++ b/thorntail/pom.xml
@@ -76,8 +76,8 @@
       <artifactId>hibernate-validator</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
+      <groupId>org.jboss.spec.javax.servlet</groupId>
+      <artifactId>jboss-servlet-api_4.0_spec</artifactId>
       <scope>compile</scope>
     </dependency>
   </dependencies>
