--- a/springboot/kubernetes/role-binding.yaml
+++ b/springboot/kubernetes/role-binding.yaml
@@ -1,7 +1,8 @@
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: openshift-kie-springboot
+  namespace: <your-namespace>
   labels:
     app: openshift-kie-springboot
 subjects:
