--- a/springboot/kubernetes/role.yaml
+++ b/springboot/kubernetes/role.yaml
@@ -1,7 +1,8 @@
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
-apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: openshift-kie-springboot
+  namespace: <your-namespace>
   labels:
     app: openshift-kie-springboot
 rules:
@@ -24,3 +25,5 @@ rules:
       - patch
       - update
       - watch
+      - edit
+      - exec
