--- a/thorntail/kubernetes/role-binding.yaml
+++ b/thorntail/kubernetes/role-binding.yaml
@@ -1,7 +1,8 @@
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: openshift-kie-thorntail
+  namespace: <your-namespace>
   labels:
     app: openshift-kie-thorntail
 subjects:
