--- a/thorntail/kubernetes/role.yaml
+++ b/thorntail/kubernetes/role.yaml
@@ -1,5 +1,5 @@
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
-apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: openshift-kie-thorntail
   labels:
@@ -24,3 +24,5 @@ rules:
       - patch
       - update
       - watch
+      - edit
+      - exec
