--- a/jdkhttp/kubernetes/role.yaml
+++ b/jdkhttp/kubernetes/role.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: openshift-kie-jdkhttp
+  namespace: <your-namespace>
   labels:
     app: openshift-kie-jdkhttp
 rules:
