--- a/springboot/kubernetes/debug_pod.yaml
+++ b/springboot/kubernetes/debug_pod.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
     - name: main
-      image: "desmax74/openshift-kie-springboot:5.4"
+      image: "<user>/openshift-kie-springboot:<tag>"
       env:
         - name: JAVA_TOOL_OPTIONS
           value: -agentlib:jdwp=transport=dt_socket,server=y,address=8000,suspend=n
