--- a/sample-hacep-project/sample-hacep-project-kjar/pom.xml
+++ b/sample-hacep-project/sample-hacep-project-kjar/pom.xml
@@ -19,8 +19,8 @@
             <artifactId>kie-remote</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.drools</groupId>
-            <artifactId>drools-model-compiler</artifactId>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-api</artifactId>
         </dependency>
     </dependencies>
 
