Changes requeste by reviewer

--- a/jdkhttp/kubernetes/debug_pod.yaml
+++ b/jdkhttp/kubernetes/debug_pod.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
     - name: main
-      image: "desmax74/openshift-kie-jdkhttp:m.4.03"
+      image: "<user>/openshift-kie-jdkhttp:<tag>"
       env:
         - name: JAVA_TOOL_OPTIONS
           value: -agentlib:jdwp=transport=dt_socket,server=y,address=8000,suspend=n
