--- a/kie-remote/pom.xml
+++ b/kie-remote/pom.xml
@@ -17,6 +17,10 @@
           <artifactId>kafka-clients</artifactId>
       </dependency>
       <dependency>
+          <groupId>org.kie</groupId>
+          <artifactId>kie-api</artifactId>
+      </dependency>
+      <dependency>
           <groupId>org.assertj</groupId>
           <artifactId>assertj-core</artifactId>
           <scope>test</scope>
