[Drools 4685] Updatable kjar on pods (#57)
* first commit

* refactoring

* refactoring

* Test

* fix

* Changes requested by reviewer

* Changes requested by reviewer

* Handled Classpath KieContainer and fact handler corner cases

* handle exception if the container isn't updatable

* configuration to use a nexus on openshift to update kjar

* Steps to configure the Updatable Kjar

* removed Env vars not needed

* revert check

* fix duplicated deps

* bypass CoreKube if is underTest

* aligned doc of jdkhttp with springboot

* changes requested by reviewer

* aligned to the CCT configuration

* removed values for the documentation

* Changes requeste by reviewer

* fix test

* Added return value from updateKjar action

* messages moved to kie-remote to be available to the client

* Removed log info

* added integration test

* Switched to Final version for the test

* test with kjars generated on the fly

* changes requested by reviewer

--- a/hacep/pom.xml
+++ b/hacep/pom.xml
@@ -17,6 +17,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>kie-ci</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.drools</groupId>
       <artifactId>drools-compiler</artifactId>
     </dependency>
@@ -57,6 +62,17 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
