--- a/sample-hacep-project/sample-hacep-project-kjar/pom.xml
+++ b/sample-hacep-project/sample-hacep-project-kjar/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>sample-hacep-project</artifactId>
         <groupId>org.kie</groupId>
+        <artifactId>sample-hacep-project</artifactId>
         <version>7.31.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,8 +19,8 @@
             <artifactId>kie-remote</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.drools</groupId>
-            <artifactId>drools-model-compiler</artifactId>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-api</artifactId>
         </dependency>
     </dependencies>
 
