--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <version.junit>4.12</version.junit>
     <version.org.apache.kafka>2.2.1</version.org.apache.kafka>
     <version.k8s.client>4.6.0</version.k8s.client>
+    <version.logback>1.2.3</version.logback>
     <version.logback.kafka.appender>0.2.0-RC2</version.logback.kafka.appender>
     <version.servlet>2.0.0.Final</version.servlet>
     <version.slf4j>1.7.26</version.slf4j>
@@ -189,6 +190,16 @@
         <artifactId>javax.ws.rs-api</artifactId>
         <version>${version.javax.ws.rs}</version>
         <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${version.logback}</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
       </dependency>
 
       <dependency>
