--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,7 @@
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
+        <version>${version.logback}</version>
       </dependency>
 
       <dependency>
