moved permissions to the dockerfile

--- a/jdkhttp/Dockerfile
+++ b/jdkhttp/Dockerfile
@@ -5,5 +5,9 @@ COPY ./scripts/jboss-settings.xml /root/.m2/settings.xml
 COPY ./scripts/logging.sh /deployments/logging.sh
 COPY ./scripts/maven.sh /deployments/maven.sh
 COPY ./scripts/start.sh /deployments/start.sh
+RUN chmod 775 /deployments/logging.sh
+RUN chmod 775 /deployments/maven.sh
+RUN chmod 775 /deployments/start.sh
+RUN chmod 775 /deployments/app.jar
 EXPOSE 8080
 CMD ["bash", "/deployments/start.sh"]
