changed home to use a rootless user home

--- a/jdkhttp/Dockerfile
+++ b/jdkhttp/Dockerfile
@@ -1,7 +1,8 @@
 FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
 RUN microdnf install java-1.8.0-openjdk-headless && microdnf clean all
+ENV HOME /deployments
 COPY target/*-jdkhttp-fat.jar /deployments/app.jar
-COPY ./scripts/jboss-settings.xml /root/.m2/settings.xml
+COPY ./scripts/jboss-settings.xml /deployments/.m2/settings.xml
 COPY ./scripts/logging.sh /deployments/logging.sh
 COPY ./scripts/maven.sh /deployments/maven.sh
 COPY ./scripts/start.sh /deployments/start.sh
