--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,6 @@
     <version.logback.kafka.appender>0.2.0-RC2</version.logback.kafka.appender>
     <version.servlet>2.0.0.Final</version.servlet>
     <version.slf4j>1.7.26</version.slf4j>
-    <version.org.springframework>5.1.3.RELEASE</version.org.springframework>
-    <version.org.spring-boot>2.1.1.RELEASE</version.org.spring-boot>
     <version.validation.api>2.0.1.Final</version.validation.api>
   </properties>
 
@@ -135,7 +133,7 @@
         <!-- Spring Boot -->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>${version.org.spring-boot}</version>
+        <version>${version.org.springframework.boot}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -143,7 +141,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
-        <version>${version.org.spring-boot}</version>
+        <version>${version.org.springframework.boot}</version>
         <exclusions>
           <exclusion>
             <groupId>org.springframework</groupId>
@@ -155,7 +153,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-logging</artifactId>
-        <version>${version.org.spring-boot}</version>
+        <version>${version.org.springframework.boot}</version>
       </dependency>
 
       <!-- Validation used by fabric8 client-->
